--- a/approved/index.html
+++ b/approved/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Pagamento Aprovado 🎉 | Dieta Pronta Online</title>
+  <title>Pagamento Aprovado | Dieta Pronta Online</title>
   <meta name="description" content="Confirmação de pagamento aprovado para o plano personalizado da Dieta Pronta Online.">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -14,7 +14,6 @@
     body{ font-family:'Inter',system-ui,-apple-system,Segoe UI,Roboto,'Helvetica Neue',Arial,'Noto Sans','Liberation Sans',sans-serif; }
     .container{ max-width:980px; }
     .shadow-soft{ box-shadow:0 10px 25px rgba(2,6,23,.08); }
-    .badge{ display:inline-block; padding:4px 10px; border-radius:999px; font-weight:700; font-size:.8rem; }
     #statusEnvio {
       display: inline-block;
       font-size: 1.3rem;
@@ -54,7 +53,7 @@
   <section class="py-10">
     <div class="container mx-auto px-4">
       <div class="p-6 bg-white rounded-2xl shadow-soft border border-slate-200">
-        <h2 class="text-2xl font-extrabold mb-3 text-emerald-700">📋 Resumo do seu plano</h2>
+        <h2 class="text-2xl font-extrabold mb-3 text-emerald-700">Resumo do seu plano</h2>
         <div class="grid md:grid-cols-2 gap-6 text-slate-700">
           <div>
             <p><strong>Nome:</strong> <span id="infoNome">-</span></p>
@@ -74,12 +73,11 @@
   <!-- Hero -->
   <section class="bg-gradient-to-b from-white to-slate-100 text-center">
     <div class="container mx-auto px-4 py-14">
-      <h1 class="text-3xl md:text-5xl font-extrabold text-emerald-600">🎉 Parabéns, <span id="nomeSpan">sua jornada começou com o pé direito!</span></h1>
+      <h1 class="text-3xl md:text-5xl font-extrabold text-emerald-600">Parabéns, <span id="nomeSpan">sua jornada começou com o pé direito!</span></h1>
       <p class="mt-4 text-lg text-slate-700 max-w-2xl mx-auto">
         Seu pagamento foi <strong>aprovado com sucesso!</strong>
-        Agora você tem acesso ao seu <strong>Plano Alimentar Personalizado</strong>, criado com base no seu corpo e nas suas respostas do quiz. 🥗
+        Agora você tem acesso ao seu <strong>Plano Alimentar Personalizado</strong>, criado com base no seu corpo e nas suas respostas do quiz.
       </p>
-      <!-- MENSAGEM DE ENVIO AUTOMÁTICO -->
       <div id="statusEnvio" class="mx-auto"></div>
     </div>
   </section>
@@ -88,11 +86,10 @@
   <section class="py-10">
     <div class="container mx-auto px-4 max-w-2xl">
       <div class="rounded-2xl bg-white border border-slate-200 shadow-soft p-6 text-center">
-        <h2 class="text-2xl font-extrabold mb-3">📧 Receba seu plano por e-mail</h2>
+        <h2 class="text-2xl font-extrabold mb-3">Receba seu plano por e-mail</h2>
         <p class="text-slate-700 mb-4">
           Prefere receber seu plano personalizado por e-mail? Basta inserir seu endereço abaixo e enviaremos automaticamente.
         </p>
-        <!-- Formulário de envio de e-mail -->
         <div id="emailForm" class="flex flex-col gap-3 items-center">
           <input type="email" id="emailInput" placeholder="Digite seu e-mail" class="border rounded-xl p-3 w-full max-w-md text-center" />
           <button id="btnEmail" class="rounded-xl px-5 py-3 bg-[var(--brand)] text-white font-semibold hover:bg-emerald-600 transition">
@@ -104,13 +101,11 @@
     </div>
   </section>
  
-  <!-- Agradecimento -->
   <section class="py-10 text-center">
     <div class="container mx-auto px-4">
-      <h3 class="text-xl font-bold text-emerald-600">💚 Obrigado por confiar em nós!</h3>
+      <h3 class="text-xl font-bold text-emerald-600">Obrigado por confiar em nós!</h3>
       <p class="mt-2 text-slate-700 max-w-xl mx-auto">
-        Nossa equipe vai te enviar seu plano personalizado em breve.
-        Fique de olho no seu WhatsApp e e-mail — é por lá que você receberá tudo!
+        Nosso time já está enviando seu plano por WhatsApp e e-mail. Fique de olho!
       </p>
     </div>
   </section>
@@ -122,9 +117,20 @@
   <!-- Scripts -->
   <script>
   document.addEventListener("DOMContentLoaded", function(){
-    // === CARREGA DADOS DO LOCALSTORAGE (COM DEBUG) ===
+    // === LÊ PLANO DA URL (PRIORIDADE MÁXIMA) ===
+    const urlParams = new URLSearchParams(window.location.search);
+    let dietTitle = urlParams.get('plano') || urlParams.get('dieta');
+    
+    // === SE NÃO TEM NA URL, TENTA LOCALSTORAGE ===
+    if (!dietTitle) {
+      dietTitle = localStorage.getItem('diet_title') || 
+                   localStorage.getItem('quiz_result_title') || 
+                   localStorage.getItem('plano_selecionado') || 
+                   'Plano Ectomorfo Low Carb';
+    }
+
+    // === OUTROS DADOS ===
     const nome = localStorage.getItem('lead_nome') || '';
-    let dietTitle = localStorage.getItem('diet_title') || localStorage.getItem('quiz_result_title') || 'Dieta Personalizada';
     const bodyType = localStorage.getItem('body_type') || localStorage.getItem('quiz_body_type') || '';
     const imcValue = localStorage.getItem('imc_value') || '';
     const imcLabel = localStorage.getItem('imc_label') || '';
@@ -133,68 +139,58 @@
     const email = localStorage.getItem('lead_email') || '';
 
     // === DEBUG NO CONSOLE ===
-    console.log("=== DEBUG LOCALSTORAGE ===");
+    console.log("=== DEBUG FINAL ===");
+    console.log("URL plano:", urlParams.get('plano'));
     console.log("diet_title:", localStorage.getItem('diet_title'));
     console.log("quiz_result_title:", localStorage.getItem('quiz_result_title'));
-    console.log("body_type:", bodyType);
+    console.log("DIETA FINAL:", dietTitle);
     console.log("phone:", phone);
-    console.log("========================");
+    console.log("==================");
 
-    // === FORÇA ATUALIZAÇÃO DA DIETA (SE VAZIA, TENTA OUTRAS CHAVES) ===
-    if (!dietTitle || dietTitle === 'Dieta Personalizada') {
-      dietTitle = localStorage.getItem('plano_selecionado') || localStorage.getItem('result_plano') || 'Plano Ectomorfo Low Carb'; // Fallback
-      localStorage.setItem('quiz_result_title', dietTitle); // Salva para próxima vez
-    }
-
-    // === PREENCHE CAMPOS NA TELA ===
+    // === PREENCHE TELA ===
     if(nome) document.getElementById('nomeSpan').textContent = nome + "!";
     document.getElementById('year').textContent = new Date().getFullYear();
     document.getElementById('infoNome').textContent = nome || '-';
-    document.getElementById('infoDieta').textContent = dietTitle; // ← AQUI FICA CORRETO
+    document.getElementById('infoDieta').textContent = dietTitle;
     document.getElementById('infoBodyType').textContent = bodyType || '---';
     document.getElementById('infoIMC').textContent = imcValue || '---';
     document.getElementById('infoIMCLabel').textContent = imcLabel ? "(" + imcLabel + ")" : '';
     document.getElementById('descSpan').textContent = desc;
 
-    // === ENVIO AUTOMÁTICO PARA WHATSAPP (COM FORMATAÇÃO E DEBUG) ===
-    if (phone) {
+    // === ENVIO AUTOMÁTICO WHATSAPP ===
+    if (phone && dietTitle) {
       const statusDiv = document.getElementById('statusEnvio');
       let count = 5;
-      statusDiv.textContent = "⏳ Enviando plano para seu WhatsApp...";
+      statusDiv.textContent = "Enviando plano para seu WhatsApp...";
       const timer = setInterval(async () => {
-        statusDiv.textContent = `⏳ Enviando plano para seu WhatsApp... ${count}`;
+        statusDiv.textContent = `Enviando plano para seu WhatsApp... ${count}`;
         count--;
         if (count < 0) {
           clearInterval(timer);
           try {
-            // Formata phone: remove não-dígitos + adiciona 55
             const formattedPhone = '55' + phone.replace(/\D/g, '');
-
             const payload = {
-              phone: formattedPhone,  // ← CORRIGIDO: phone formatado
-              dieta: dietTitle,  // ← Plano correto
-              tipo: "dieta+receitas"  // ← Adicionado para receitas
+              phone: formattedPhone,
+              dieta: dietTitle,
+              tipo: "dieta+receitas"
             };
-
-            console.log("=== DEBUG WHATSAPP PAYLOAD ===", payload);
-
+            console.log("ENVIANDO WHATSAPP:", payload);
             const res = await fetch('https://dietapronta.online/whatsapp-bot.php', {
               method: 'POST',
               headers: { 'Content-Type': 'application/json' },
               body: JSON.stringify(payload)
             });
             const data = await res.json();
-            console.log("=== RESPOSTA WHATSAPP ===", data);
-
+            console.log("RESPOSTA WHATSAPP:", data);
             if (data.ok && !data.skip) {
-              statusDiv.innerHTML = `✅ Enviado com sucesso para seu WhatsApp: ${formattedPhone.replace(/^55/, '').replace(/(\d{2})(\d{5})(\d{4})/, "($1) $2-$3")}`;
+              statusDiv.innerHTML = `Enviado com sucesso para: ${formattedPhone.replace(/^55/, '').replace(/(\d{2})(\d{5})(\d{4})/, "($1) $2-$3")}`;
             } else {
-              statusDiv.innerHTML = `⚠️ Falha no WhatsApp: ${data.msg || data.error || 'erro desconhecido'}`;
+              statusDiv.innerHTML = `Falha: ${data.msg || data.error || 'erro'}`;
               statusDiv.style.color = "red";
             }
           } catch (e) {
             console.error("ERRO WHATSAPP:", e);
-            statusDiv.innerHTML = "❌ Erro de conexão ao enviar para WhatsApp.";
+            statusDiv.innerHTML = "Erro de conexão.";
             statusDiv.style.color = "red";
           }
           statusDiv.style.animation = "none";
@@ -202,60 +198,53 @@
           statusDiv.style.color = "#065f46";
         }
       }, 1000);
-    } else {
-      document.getElementById('statusEnvio').textContent = "⚠️ WhatsApp não configurado.";
     }
   });
 
-  // === ENVIO DE E-MAIL (BOTÃO) ===
-  document.addEventListener("DOMContentLoaded", () => {
-    const btnEmail = document.getElementById("btnEmail");
+  // === ENVIO DE E-MAIL ===
+  document.getElementById("btnEmail").addEventListener("click", async (e) => {
+    e.preventDefault();
     const emailInput = document.getElementById("emailInput");
     const emailStatus = document.getElementById("emailStatus");
-    const dietTitle = localStorage.getItem('diet_title') || localStorage.getItem('quiz_result_title') || 'Dieta Personalizada';
+    const email = emailInput.value.trim();
 
-    btnEmail.addEventListener("click", async (e) => {
-      e.preventDefault();
-      const email = emailInput.value.trim();
+    // Pega plano da URL ou localStorage
+    const urlParams = new URLSearchParams(window.location.search);
+    let dietTitle = urlParams.get('plano') || urlParams.get('dieta');
+    if (!dietTitle) {
+      dietTitle = localStorage.getItem('diet_title') || localStorage.getItem('quiz_result_title') || 'Plano Ectomorfo Low Carb';
+    }
 
-      if (!email || !email.includes("@")) {
-        emailStatus.textContent = "⚠️ Digite um e-mail válido.";
-        emailStatus.style.color = "red";
-        return;
-      }
+    if (!email || !email.includes("@")) {
+      emailStatus.textContent = "Digite um e-mail válido.";
+      emailStatus.style.color = "red";
+      return;
+    }
 
-      emailStatus.textContent = "⏳ Enviando plano para " + email + "...";
-      emailStatus.style.color = "#047857";
+    emailStatus.textContent = "Enviando...";
+    emailStatus.style.color = "#047857";
 
-      try {
-        const payload = {
-          email: email,  // ← Usuário digita
-          dieta: dietTitle,  // ← Plano correto do localStorage
-          tipo: "dieta+receitas"
-        };
-
-        console.log("=== DEBUG E-MAIL PAYLOAD ===", payload);
-
-        const res = await fetch('https://dietapronta.online/send_email_plan.php', {
-          method: 'POST',
-          headers: { 'Content-Type': 'application/json' },
-          body: JSON.stringify(payload)
-        });
-        const data = await res.json();
-        console.log("=== RESPOSTA E-MAIL ===", data);
-
-        if (data.ok) {
-          emailStatus.innerHTML = "✅ Plano enviado com sucesso para: <strong>" + email + "</strong>";
-        } else {
-          emailStatus.innerHTML = "⚠️ Falha no envio: " + (data.error || 'erro desconhecido');
-          emailStatus.style.color = "red";
-        }
-      } catch (err) {
-        console.error("ERRO E-MAIL:", err);
-        emailStatus.textContent = "❌ Erro de conexão ao enviar o e-mail.";
+    try {
+      const payload = { email, dieta: dietTitle, tipo: "dieta+receitas" };
+      console.log("ENVIANDO E-MAIL:", payload);
+      const res = await fetch('https://dietapronta.online/send_email_plan.php', {
+        method: 'POST',
+        headers: { 'Content-Type': 'application/json' },
+        body: JSON.stringify(payload)
+      });
+      const data = await res.json();
+      console.log("RESPOSTA E-MAIL:", data);
+      if (data.ok) {
+        emailStatus.innerHTML = "Enviado com sucesso para: <strong>" + email + "</strong>";
+      } else {
+        emailStatus.innerHTML = "Falha: " + (data.error || 'erro');
         emailStatus.style.color = "red";
       }
-    });
+    } catch (err) {
+      console.error("ERRO E-MAIL:", err);
+      emailStatus.textContent = "Erro de conexão.";
+      emailStatus.style.color = "red";
+    }
   });
   </script>
 </body>
