--- a/approved/index.html
+++ b/approved/index.html
@@ -53,7 +53,7 @@
   <section class="py-10">
     <div class="container mx-auto px-4">
       <div class="p-6 bg-white rounded-2xl shadow-soft border border-slate-200">
-        <h2 class="text-2xl font-extrabold mb-3 text-emerald-700">Resumo do seu plano</h2>
+        <h2 class="text-2xl font-extrabold mb-3 text-emerald-700">Resumo do seu道德</h2>
         <div class="grid md:grid-cols-2 gap-6 text-slate-700">
           <div>
             <p><strong>Nome:</strong> <span id="infoNome">-</span></p>
@@ -116,20 +116,24 @@
 
   <!-- Scripts -->
   <script>
-  document.addEventListener("DOMContentLoaded", function(){
-    // === LÊ PLANO DA URL (PRIORIDADE MÁXIMA) ===
-    const urlParams = new URLSearchParams(window.location.search);
-    let dietTitle = urlParams.get('plano') || urlParams.get('dieta');
-    
-    // === SE NÃO TEM NA URL, TENTA LOCALSTORAGE ===
-    if (!dietTitle) {
-      dietTitle = localStorage.getItem('diet_title') || 
-                   localStorage.getItem('quiz_result_title') || 
-                   localStorage.getItem('plano_selecionado') || 
-                   'Plano Ectomorfo Low Carb';
+  // === FUNÇÃO: PEGA PARÂMETRO DA URL ===
+  function getUrlParam(name) {
+    return new URLSearchParams(window.location.search).get(name);
+  }
+
+  document.addEventListener("DOMContentLoaded", function () {
+    // === 1. PEGA PLANO DA URL (PRIORIDADE) ===
+    let plano = getUrlParam('plano') || getUrlParam('dieta');
+
+    // === 2. SE NÃO TEM, TENTA LOCALSTORAGE ===
+    if (!plano) {
+      plano = localStorage.getItem('diet_title') ||
+              localStorage.getItem('quiz_result_title') ||
+              localStorage.getItem('plano_selecionado') ||
+              'Plano Ectomorfo Low Carb';
     }
 
-    // === OUTROS DADOS ===
+    // === 3. OUTROS DADOS ===
     const nome = localStorage.getItem('lead_nome') || '';
     const bodyType = localStorage.getItem('body_type') || localStorage.getItem('quiz_body_type') || '';
     const imcValue = localStorage.getItem('imc_value') || '';
@@ -138,32 +142,28 @@
     const phone = localStorage.getItem('lead_whats') || '';
     const email = localStorage.getItem('lead_email') || '';
 
-    // === DEBUG NO CONSOLE ===
-    console.log("=== DEBUG FINAL ===");
-    console.log("URL plano:", urlParams.get('plano'));
-    console.log("diet_title:", localStorage.getItem('diet_title'));
-    console.log("quiz_result_title:", localStorage.getItem('quiz_result_title'));
-    console.log("DIETA FINAL:", dietTitle);
-    console.log("phone:", phone);
-    console.log("==================");
-
-    // === PREENCHE TELA ===
-    if(nome) document.getElementById('nomeSpan').textContent = nome + "!";
+    // === 4. PREENCHE TELA ===
+    if (nome) document.getElementById('nomeSpan').textContent = nome + "!";
     document.getElementById('year').textContent = new Date().getFullYear();
     document.getElementById('infoNome').textContent = nome || '-';
-    document.getElementById('infoDieta').textContent = dietTitle;
+    document.getElementById('infoDieta').textContent = plano;
     document.getElementById('infoBodyType').textContent = bodyType || '---';
     document.getElementById('infoIMC').textContent = imcValue || '---';
-    document.getElementById('infoIMCLabel').textContent = imcLabel ? "(" + imcLabel + ")" : '';
+    document.getElementById('infoIMCLabel').textContent = imcLabel ? `(${imcLabel})` : '';
     document.getElementById('descSpan').textContent = desc;
 
-    // === ENVIO AUTOMÁTICO WHATSAPP ===
-    if (phone && dietTitle) {
+    // === 5. DEBUG NO CONSOLE ===
+    console.log("PLANO ENVIADO:", plano);
+    console.log("PHONE:", phone);
+    console.log("URL:", window.location.href);
+
+    // === 6. ENVIO AUTOMÁTICO WHATSAPP ===
+    if (phone && plano) {
       const statusDiv = document.getElementById('statusEnvio');
       let count = 5;
-      statusDiv.textContent = "Enviando plano para seu WhatsApp...";
+      statusDiv.innerHTML = "Enviando seu plano por WhatsApp...";
       const timer = setInterval(async () => {
-        statusDiv.textContent = `Enviando plano para seu WhatsApp... ${count}`;
+        statusDiv.innerHTML = `Enviando... ${count}`;
         count--;
         if (count < 0) {
           clearInterval(timer);
@@ -171,10 +171,10 @@
             const formattedPhone = '55' + phone.replace(/\D/g, '');
             const payload = {
               phone: formattedPhone,
-              dieta: dietTitle,
+              dieta: plano,
               tipo: "dieta+receitas"
             };
-            console.log("ENVIANDO WHATSAPP:", payload);
+
             const res = await fetch('https://dietapronta.online/whatsapp-bot.php', {
               method: 'POST',
               headers: { 'Content-Type': 'application/json' },
@@ -182,37 +182,36 @@
             });
             const data = await res.json();
             console.log("RESPOSTA WHATSAPP:", data);
+
             if (data.ok && !data.skip) {
-              statusDiv.innerHTML = `Enviado com sucesso para: ${formattedPhone.replace(/^55/, '').replace(/(\d{2})(\d{5})(\d{4})/, "($1) $2-$3")}`;
+              statusDiv.innerHTML = `Enviado com sucesso!`;
+              statusDiv.style.color = "#065f46";
             } else {
-              statusDiv.innerHTML = `Falha: ${data.msg || data.error || 'erro'}`;
+              statusDiv.innerHTML = `Falha: ${data.msg || 'erro'}`;
               statusDiv.style.color = "red";
             }
           } catch (e) {
-            console.error("ERRO WHATSAPP:", e);
             statusDiv.innerHTML = "Erro de conexão.";
             statusDiv.style.color = "red";
+            console.error(e);
           }
           statusDiv.style.animation = "none";
           statusDiv.style.background = "#d1fae5";
-          statusDiv.style.color = "#065f46";
         }
       }, 1000);
     }
   });
 
-  // === ENVIO DE E-MAIL ===
+  // === ENVIO DE E-MAIL (BOTÃO) ===
   document.getElementById("btnEmail").addEventListener("click", async (e) => {
     e.preventDefault();
     const emailInput = document.getElementById("emailInput");
     const emailStatus = document.getElementById("emailStatus");
     const email = emailInput.value.trim();
 
-    // Pega plano da URL ou localStorage
-    const urlParams = new URLSearchParams(window.location.search);
-    let dietTitle = urlParams.get('plano') || urlParams.get('dieta');
-    if (!dietTitle) {
-      dietTitle = localStorage.getItem('diet_title') || localStorage.getItem('quiz_result_title') || 'Plano Ectomorfo Low Carb';
+    let plano = getUrlParam('plano') || getUrlParam('dieta');
+    if (!plano) {
+      plano = localStorage.getItem('diet_title') || localStorage.getItem('quiz_result_title') || 'Plano Ectomorfo Low Carb';
     }
 
     if (!email || !email.includes("@")) {
@@ -225,23 +224,21 @@
     emailStatus.style.color = "#047857";
 
     try {
-      const payload = { email, dieta: dietTitle, tipo: "dieta+receitas" };
-      console.log("ENVIANDO E-MAIL:", payload);
+      const payload = { email, dieta: plano, tipo: "dieta+receitas" };
       const res = await fetch('https://dietapronta.online/send_email_plan.php', {
         method: 'POST',
         headers: { 'Content-Type': 'application/json' },
         body: JSON.stringify(payload)
       });
       const data = await res.json();
-      console.log("RESPOSTA E-MAIL:", data);
+
       if (data.ok) {
-        emailStatus.innerHTML = "Enviado com sucesso para: <strong>" + email + "</strong>";
+        emailStatus.innerHTML = `Enviado para: <strong>${email}</strong>`;
       } else {
-        emailStatus.innerHTML = "Falha: " + (data.error || 'erro');
+        emailStatus.innerHTML = `Erro: ${data.error || 'desconhecido'}`;
         emailStatus.style.color = "red";
       }
-    } catch (err) {
-      console.error("ERRO E-MAIL:", err);
+    } catch (e) {
       emailStatus.textContent = "Erro de conexão.";
       emailStatus.style.color = "red";
     }
